# uuid

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: ctest.yml
iface/rfc4122/: uuid.h
impl/rfc4122/: uuid.cpp
tests/: uuid_tests.cpp
